OpenAPI custom
